css/styles.css
/* ... */
.portfolio-link {
  display: block;

  transition: box-shadow var(--trans-dur) var(--trans-func);
}

.portfolio-link:hover,
.portfolio-link:focus {
  box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06),
    1px 4px 6px rgba(0, 0, 0, 0.16);
}

.portfolio-element {
  margin-top: 30px;
}

.portfolio-element:not(:nth-child(3n)) {
  margin-right: 30px;
}

.portfolio-element > a {
  color: unset;
}

.portfolio-element-text {
  padding: 20px 24px;
  border: 1px solid #eeeeee;
  border-top: none;
}

.portfolio-element-title {
  font-size: 18px;
  line-height: 2em;
  letter-spacing: 0.06em;
  margin-bottom: 4px;
}

.portfolio-element-description {
  font-size: 16px;
  line-height: 1.875em;
  color: var(--secondary-color);
}

.page-footer {
  background-color: var(--background-dark);
  padding-top: 60px;
  padding-bottom: 60px;
}

.page-footer .company-logo {
  color: var(--background-light);
  margin-bottom: 20px;
}

.footer-address {
  font-style: normal;
}

.footer-contact {
  color: var(--background-light);
  margin-top: 9px;
  line-height: 1.714;
}

.footer-contact-link {
  color: var(--secondary-color);
}

.footer-header {
  color: var(--background-light);
  font-size: 14px;
  font-weight: 700;
  line-height: 1.17;
  text-transform: uppercase;
  margin-top: 12px;
  margin-bottom: 20px;
}

.footer-mid {
  margin-left: 70px;
}

.link-in-footer {
  background: rgba(255, 255, 255, 0.1);
  fill: var(--background-light);
}

.footer-right {
  margin-left: 93px;
}

.subscribe-input {
  width: 358px;
  height: 50px;
  margin-right: 12px;

  padding-left: 16px;

  background: none;
  font-size: 16px;
  line-height: 1.25;
  color: var(--background-light);

  border: 1px solid rgba(255, 255, 255, 0.3);
  border-radius: 4px;
}

.subscribe-input::placeholder {
  color: rgba(255, 255, 255, 0.6);;
}

.subscribe-submit-icon {
  width: 24px;
  height: 24px;
  display: inline-block;
  vertical-align: middle;
  margin-left: 10px;

  fill: var(--background-light);
  transition: fill var(--trans-dur) var(--trans-func);
}

.subscribe-button {
  padding-left: 29px;
  padding-right: 28px;
}

.subscribe-button:hover .subscribe-submit-icon,
.subscribe-button:focus .subscribe-submit-icon {
  fill: var(--main-color);
}

.modal-overlay {
  position: fixed;
  top: 0;
  bottom: 0;
  left: 0;
  right: 0;
  background-color: rgba(0, 0, 0, 0.2);

  opacity: 1;
  transition: opacity var(--trans-dur) var(--trans-func);
}

.is-hidden {
  visibility: hidden;
  opacity: 0;
  pointer-events: none;
}

.modal-window {
  position: absolute;
  width: 528px;
  height: 581px;
  left: 50%;
  top: 50%;
  transform: translate(-50%, -50%);

  padding: 40px 39px 40px 41px;
  background-color: var(--background-light);
  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
    0px 2px 1px rgba(0, 0, 0, 0.2);
  border-radius: 4px;

  transition: transform var(--trans-dur) var(--trans-func);
}

.is-hidden .modal-window {
  transform: translate(-50%, -50%) scale(0.5);
}

.close-button {
  position: absolute;
  right: 8px;
  top: 8px;
  width: 30px;
  height: 30px;
  padding: 0;
  display: flex;
  align-items: center;
  justify-content: center;
  background: none;
  border: 1px solid rgba(0, 0, 0, 0.1);
  border-radius: 50%;
  box-shadow: none;
}

.close-button:hover,
.close-button:focus {
  fill: var(--highlight-color);
}

.modal-title {
  font-size: 20px;
  line-height: 1.15;
  text-align: center;
  letter-spacing: 0.03em;
  color: var(--main-color);

  margin-bottom: 12px;
}

.form-label {
  display: block;
  margin-bottom: 10px;
  color: var(--secondary-color);
}

.modal-text-box-wrapper {
  position: relative;
  display: block;
  margin-top: 4px;
}

.modal-text-box {
  /* display: block; */
  width: 100%;
  height: 40px;
  padding-left: 42px;
  /* box-shadow: none; */
  /* outline: none; */
  border: 1px solid rgba(33, 33, 33, 0.2);
  border-radius: 4px;

  transition: border-color var(--trans-dur) var(--trans-func);
}

/* .modal-text-box:hover, */
.modal-text-box:focus,
.textarea-comment:focus {
  outline: none;
  border-color: var(--highlight-color);
}

.modal-text-box-icon {
  position:absolute;
  top: 50%;
  transform: translateY(-50%);
  left: 12px;
  width: 18px;
  height: 18px;

  fill:var(--main-color);
  transition: fill var(--trans-dur) var(--trans-func);
}

/* .modal-text-box:hover + .modal-text-box-icon,  */
.modal-text-box:focus + .modal-text-box-icon {
  fill: var(--highlight-color);
}

.textarea-comment {
  width: 100%;
  height: 120px;
  margin-top: 4px;
  padding: 12px 16px;
  resize: none;

  border: 1px solid rgba(33, 33, 33, 0.2);
  border-radius: 4px;

  transition: border-color var(--trans-dur) var(--trans-func);
}

.textarea-comment::placeholder {
  color: rgba(117, 117, 117, 0.5);
}

.agreement-wrapper {
  margin-top: 20px;
  margin-bottom: 30px;

  line-height: 1.714;
  color: var(--secondary-color);
  text-align: center;
}

.custom-checkbox {
  display: inline-block;
  width: 16px;
  height: 15px;
  padding: 2px 0.5px;
  /* margin-right: 7px; */
  vertical-align: middle;
  fill: var(--background-light);
  border: 2px solid var(--main-color);
  border-radius: 2px;
}

.checkbox:focus + .custom-checkbox {
  border-color: var(--highlight-color);
}

.checkbox:checked + .custom-checkbox {
  background-color: var(--highlight-color);
}

.agreement-link {
  color: var(--highlight-color);
  text-decoration: underline;
  text-decoration-skip-ink: none;
}

.modal-submit-button {
  padding-left: 56px;
  padding-right: 56px;
}

